
name: dawn
version: 0.5.0
synopsis: A custom prelude.
description: A custom prelude.
license: BSD3
license-file: LICENSE
author: Jelle Lingier
maintainer: Jelle Lingier <jelle.lingier@gmail.com>
category: Prelude
build-type: Simple
cabal-version: >=1.10

library
   hs-source-dirs: src
   build-depends: base, text, transformers, bytestring, containers, lifted-base, mtl, exceptions
   exposed-modules: Dawn
                    Dusk
                    Dawn.Internal
   default-extensions: NoImplicitPrelude OverloadedStrings TupleSections ViewPatterns MultiParamTypeClasses OverloadedLists
   build-tools: hsc2hs
   ghc-options: -Wall -O2 -funbox-strict-fields -fwarn-tabs
   default-language: Haskell2010
