cabal-version: 1.12

name:           dawn
version:        0.5.1
synopsis:       A custom prelude.
description:    Please see the README on GitHub at <https://github.com/ellej/dawn#readme>
category:       Prelude
homepage:       https://github.com/ellej/dawn#readme
bug-reports:    https://github.com/ellej/dawn/issues
author:         Jelle Lingier
maintainer:     jelle.lingier@gmail.com
copyright:      2019 Jelle Lingier
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.adoc

source-repository head
  type: git
  location: https://github.com/ellej/dawn

library
  exposed-modules:
      Dawn
      Dusk
  other-modules:
      Dawn.Internal
  hs-source-dirs:
      src
  default-extensions: NoImplicitPrelude OverloadedStrings
  build-depends:
    base >=4.7 && <5,
    bytestring,
    exceptions,
    transformers,
    containers,
    mtl,
    text
  default-language: Haskell2010
